--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^19.1.1",
     "react-router": "^7.9.3",
     "recharts": "^3.2.1",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "sweetalert2": "^11.25.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
