--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.3",
+    "react-router-dom": "^7.9.4",
     "recharts": "^3.2.1",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.25.0"
